Event Signup and Report Meal and Task ordering standardization.
